# rust-the-audio-book

./: .gitmodules  Cargo.toml  README.md
src/: audio.rs  lib.rs  main.rs  markdown.rs  tts.rs  util.rs
