[package]
name = "rust-the-audio-book"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
base64 = "0.22"
dotenvy = "0.15"
glob = "0.3"
reqwest = { version = "0.12", features = ["json", "gzip", "brotli", "deflate", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
regex = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
